    to DEBUG. (Santhosh Nayak via cnauroth)

    HDFS-9128. TestWebHdfsFileContextMainOperations and
    TestSWebHdfsFileContextMainOperations fail due to invalid HDFS path on
    Windows. (cnauroth)

    HDFS-4366. Block Replication Policy Implementation May Skip
    Higher-Priority Blocks for Lower-Priority Blocks. (Derek Dagit via
    Kihwal Lee)

Release 2.7.2

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8863. The remaining space check in BlockPlacementPolicyDefault is
    flawed. (Kihwal Lee via Yi Liu)

    HDFS-8995. Flaw in registration bookeeping can make DN die on
    reconnect. (Kihwal Lee via yliu)

    HDFS-6945. BlockManager should remove a block from excessReplicateMap
    and decrement ExcessBlocks metric when the block is removed.  (aajisaka)

    HDFS-9178. Slow datanode I/O can cause a wrong node to be marked
    bad. (Kihwal Lee)

    HDFS-8722. Optimize datanode writes for small writes and flushes.
    (Kihwal Lee)

    HDFS-9220. Reading small file (< 512 bytes) that is open for
    append fails due to incorrect checksum. (Jing Zhao via Kihwal Lee)

Release 2.7.1

  INCOMPATIBLE CHANGES

  NEW FEATURES

  IMPROVEMENTS

  BUG FIXES

    HDFS-8595. TestCommitBlockSynchronization fails with NPE. (Arpit agarwal)

    HDFS-8576. Lease recovery should return true if the lease can be released
    and the file can be closed. (J.Andreina via szetszwo)

    HDFS-8797. WebHdfsFileSystem creates too many connections for pread. (jing9)

    HDFS-8180. AbstractFileSystem Implementation for WebHdfs. (snayak via jghoman)

    HDFS-4660. Block corruption can happen during pipeline recovery.
    (Kihwal Lee)

Release 2.7.0

  INCOMPATIBLE CHANGES

  NEW FEATURES

    HDFS-3107. Introduce truncate. (Plamen Jeliazkov via shv)

    HDFS-7056. Snapshot support for truncate. (Plamen Jeliazkov and shv)

    HDFS-6673. Add delimited format support to PB OIV tool. (Eddy Xu via wang)
